grammer.txt


------------ Code Examples ---------

string name = input("What is your name? ")
int age = int(input("What is your age? "))

if age < 0 or age > 200 {
    print("Invalid age")
} else if age < 18 {
    print("You are a minor")
} else {
    print("You are an adult")
}

fn hello(name: string) -> string {
    return "Hello, " + name + "!"
}

while true {
    hello("John")
}

------ Grammar -----

program -> statement*
statement -> (declaration | assignment | function_declaration  | expression | if_statement | return_statement) "\n"
declaration -> IDENTIFIER ":" IDENTIFIER "=" expression
assignment -> IDENTIFIER "=" expression
function_declaration -> "fn" IDENTIFIER "(" parameters ")" "->" "string" block
return_statement -> "return" expression
block -> "{" statement* "}"


expression -> equality
logical -> equality ( ("or" | "and") equality )*
equality -> comparison ( ("!=" | "==") comparison )*
comparison ->  term ( ( ">" | ">=" | "<" | "<=" ) term )* 
term -> factor ( ( "-" | "+" ) factor )* 
factor -> unary ( ( "/" | "*" | "%" ) unary )* 
unary -> ( "!" | "-" ) unary | invoke
invoke -> (invoke | primary)  "(" parameter_values ")"
primary -> IDENTIFIER | INTEGER | FLOAT | STRING | BOOL | NONE | "(" expression ")" | invoke
parameter_values -> (expression ("," expression)*)?

if_statement -> "if" expression block ("else" "if" expression block)* ("else" block )?
